Backed down to Bootstrap 2.3.1 in attempt to fix collapsed menu

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -70,6 +70,4 @@ div {
   }
 }
 
-.dropdown-backdrop {
-    position: static !important;
-}
+
